--- a/src/assets/components/Nav/Nav.css
+++ b/src/assets/components/Nav/Nav.css
@@ -4,6 +4,7 @@
     /* min-width: 100%; */
     list-style: none;
     justify-content: center;
+    align-items: center;
     padding: 0;
 }
 .nav ul li{
@@ -14,6 +15,24 @@
     color: #c4c4c4;
 }
 
-/* .nroCarrito{
+.nav span {
+    position: relative; 
+    z-index: 1; 
+    display: inline-block;
+    padding: 0 0.35rem;
+    line-height: 1rem;
+}
+.nav span::before {
+    content: ""; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1.6rem; 
+    height: 1.6rem; 
+    background-color: red; 
+    border-radius: 50%; 
+    z-index: -1; 
+}
 
-} */
+
